refactor : better api responses.