@@ -1,122 +1,100 @@
 package com.teamreserve.reservationsystem.controller;
 
-import com.teamreserve.reservationsystem.dto.AvailabilityResponseDTO;
-import com.teamreserve.reservationsystem.dto.MeetingRoomDTO;
-import com.teamreserve.reservationsystem.dto.SalonRequestDTO;
+import com.teamreserve.reservationsystem.dto.*;
 import com.teamreserve.reservationsystem.service.SalonService;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
 
 @RestController
 @RequestMapping("/api/salons")
-@Tag(
-        name = "Salon Controller",
-        description = "Konferans salonları için CRUD ve müsaitlik işlemlerini yöneten controller. " +
-                "Kullanıcılar salonları görüntüleyebilir, adminler ise oluşturma, güncelleme ve silme işlemlerini yapabilir."
-)
+@Tag(name = "Salon Controller")
 public class MeetingRoomController {
 
-    @Autowired
-    private SalonService salonService;
+    @Autowired private SalonService salonService;
 
     @GetMapping
-    @Operation(
-            summary = "Tüm salonları listele",
-            description = "Sistemde kayıtlı tüm salonları döner. Bu endpoint herkese açıktır."
-    )
-    public List<MeetingRoomDTO> getAllRooms() {
-        return salonService.getAllSalons();
+    public ResponseEntity<?> getAllRooms() {
+        try {
+            List<MeetingRoomDTO> rooms = salonService.getAllSalons();
+            return ResponseEntity.ok(ApiResponse.success("Salonlar başarıyla listelendi", rooms));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(ApiErrorResponse.error("Salonlar getirilemedi", "INTERNAL_ERROR", Collections.singletonList(e.getMessage())));
+        }
     }
 
     @GetMapping("/{id}")
-    @Operation(
-            summary = "Belirli bir salonu getir",
-            description = "Verilen ID’ye göre salon bilgilerini döner. Salon bulunamazsa 404 Not Found döner."
-    )
-    @ApiResponses(value = {
-            @ApiResponse(
-                    responseCode = "200",
-                    description = "Salon bulundu",
-                    content = @Content(schema = @Schema(implementation = MeetingRoomDTO.class))
-            ),
-            @ApiResponse(
-                    responseCode = "404",
-                    description = "Belirtilen ID ile salon bulunamadı",
-                    content = @Content(schema = @Schema(type = "string"))
-            )
-    })
-    public ResponseEntity<MeetingRoomDTO> getRoomById(@PathVariable Long id) {
+    public ResponseEntity<?> getRoomById(@PathVariable Long id) {
         try {
-            return ResponseEntity.ok(salonService.getSalonById(id));
+            MeetingRoomDTO room = salonService.getSalonById(id);
+            return ResponseEntity.ok(ApiResponse.success("Salon bilgileri getirildi", room));
         } catch (RuntimeException e) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiErrorResponse.error("Salon bulunamadı", "NOT_FOUND", Collections.singletonList("ID: " + id + " olan salon mevcut değil")));
         }
     }
 
     @GetMapping("/{id}/availability")
-    @Operation(
-            summary = "Salon müsaitliğini kontrol et",
-            description = "Belirtilen tarih ve saat aralığı için salon müsaitlik durumunu ve çakışan rezervasyonları döner."
-    )
-    public ResponseEntity<AvailabilityResponseDTO> checkAvailability(
+    public ResponseEntity<?> checkAvailability(
             @PathVariable Long id,
             @RequestParam String date,
             @RequestParam String startTime,
-            @RequestParam String endTime
-    ) {
+            @RequestParam String endTime) {
         try {
-            return ResponseEntity.ok(salonService.checkAvailability(id, date, startTime, endTime));
+            AvailabilityResponseDTO availability = salonService.checkAvailability(id, date, startTime, endTime);
+            return ResponseEntity.ok(ApiResponse.success("Müsaitlik durumu kontrol edildi", availability));
         } catch (RuntimeException e) {
-            return ResponseEntity.badRequest().body(new AvailabilityResponseDTO(false, List.of()));
+            if (e.getMessage().contains("Salon not found")) {
+                return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                        .body(ApiErrorResponse.error("Salon bulunamadı", "NOT_FOUND", null));
+            }
+            return ResponseEntity.badRequest()
+                    .body(ApiErrorResponse.error("Geçersiz istek parametreleri", "BAD_REQUEST", Collections.singletonList(e.getMessage())));
         }
     }
 
     @PostMapping
     @PreAuthorize("hasAuthority('ROLE_ADMIN')")
-    @Operation(
-            summary = "Yeni salon oluştur",
-            description = "Sadece admin kullanıcılar tarafından kullanılabilir. Yeni bir salon kaydı oluşturur ve veritabanına ekler."
-    )
-    public MeetingRoomDTO createRoom(@RequestBody SalonRequestDTO request) {
-        return salonService.createSalon(request);
+    public ResponseEntity<?> createRoom(@RequestBody SalonRequestDTO request) {
+        try {
+            MeetingRoomDTO createdRoom = salonService.createSalon(request);
+            return ResponseEntity.status(HttpStatus.CREATED)
+                    .body(ApiResponse.success("Salon başarıyla oluşturuldu", createdRoom));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(ApiErrorResponse.error("Salon oluşturulamadı", "INTERNAL_ERROR", Collections.singletonList(e.getMessage())));
+        }
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasAuthority('ROLE_ADMIN')")
-    @Operation(
-            summary = "Salon bilgilerini güncelle",
-            description = "Belirli bir ID’ye sahip salonun bilgilerini günceller. Sadece admin kullanıcılar tarafından kullanılabilir."
-    )
-    public ResponseEntity<MeetingRoomDTO> updateRoom(@PathVariable Long id, @RequestBody SalonRequestDTO request) {
+    public ResponseEntity<?> updateRoom(@PathVariable Long id, @RequestBody SalonRequestDTO request) {
         try {
-            return ResponseEntity.ok(salonService.updateSalon(id, request));
+            MeetingRoomDTO updatedRoom = salonService.updateSalon(id, request);
+            return ResponseEntity.ok(ApiResponse.success("Salon başarıyla güncellendi", updatedRoom));
         } catch (RuntimeException e) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiErrorResponse.error("Salon bulunamadı", "NOT_FOUND", Collections.singletonList(e.getMessage())));
         }
     }
 
     @DeleteMapping("/{id}")
     @PreAuthorize("hasAuthority('ROLE_ADMIN')")
-    @Operation(
-            summary = "Salonu sil",
-            description = "Belirli bir salonu siler. Sadece admin kullanıcılar bu işlemi yapabilir."
-    )
-    public ResponseEntity<Void> deleteRoom(@PathVariable Long id) {
+    public ResponseEntity<?> deleteRoom(@PathVariable Long id) {
         try {
             salonService.deleteSalon(id);
-            return ResponseEntity.ok().build();
+            // 204 No Content (İçerik yok, başarılı silme)
+            return ResponseEntity.noContent().build();
         } catch (RuntimeException e) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiErrorResponse.error("Salon bulunamadı", "NOT_FOUND", Collections.singletonList(e.getMessage())));
         }
     }
 }
